// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SwitchBaseWrapper> should render a focus ring when isFocused and hasLabel is set to true 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 label {
  color: #1C2025;
  border-radius: 4px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding: 2px 2px 2px 0;
  box-shadow: 0 0 0 2px inset #0056E0;
}

<div
  className="c0"
/>
`;

exports[`<SwitchBaseWrapper> should render a focus ring when isFocused and isToggleButton is set to true and hasLabel is false 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 label {
  color: #1C2025;
  border-radius: 4px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding: 5px 3px;
  box-shadow: 0 0 0 2px inset #0056E0;
}

<div
  className="c0"
/>
`;

exports[`<SwitchBaseWrapper> should render correctly when is disabled 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 label {
  color: rgba(28,32,37,0.5);
  cursor: not-allowed;
  border-radius: 4px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding: 2px 2px 2px 0;
}

<div
  className="c0"
/>
`;

exports[`<SwitchBaseWrapper> should render correctly with default props 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 label {
  color: #1C2025;
  border-radius: 4px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding: 2px 2px 2px 0;
}

<div
  className="c0"
/>
`;
